--- a/.env
+++ b/.env
@@ -22,6 +22,12 @@ APP_SECRET=51541592d2fb9cca7fa6d5b7227ce8de
 
 ###> symfony/mailer ###
 # MAILER_DSN=smtp://localhost
+# pour un compte google :
+# - installer l'adapteur :
+# composer require symfony/google-mailer
+# - avoir un compte avec un mot de passe d'application :
+# cf https://support.google.com/accouts/answer/185833
+MAILER_DSN=gmail://janest.demo:ettanogmryxatuhe@default
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -31,3 +37,8 @@ APP_SECRET=51541592d2fb9cca7fa6d5b7227ce8de
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root@127.0.0.1:3306/symfony_blog
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
